// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "stubs.stubs";
option java_outer_classname = "bbcAppProto";

package bbcapp;

// The greeting service definition.
service NewsService {
    // Sends a greeting
    rpc getNews (NewsRequest) returns (stream NewsResponse) {}
}

// The request message containing the user's name.
message NewsRequest {
    string query = 1;
}

// The response message containing the greetings
message NewsResponse {
    string news_text = 1;
}

//protoc -I ./stubs --go_out=plugins=grpc:stubs ./stubs/stubs.proto
