// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "twitter_app.twitter_app";
option java_outer_classname = "TwitterAppProto";

package twitterapp;

// The greeting service definition.
service TwitterService {
  // Sends a greeting
  rpc getTweets (TweetRequest) returns (stream TweetResponse) {}
}

// The request message containing the user's name.
message TweetRequest {
  string name = 1;
}

// The response message containing the greetings
message TweetResponse {
  string tweet_text = 1;
}

//protoc -I ./twitter_app --go_out=plugins=grpc:twitter_app ./twitter_app/twitter_app.proto
